# cinema-mirror

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  env.sh  install.sh  pixiu_env.sh  pyproject.toml  requirement  requirement.docker  setup.py  setup.sh
cxx/src/: CMakeLists.txt
cxx/src/Hist/libinc/: HistCtypes.hh  NumpyHist1D.hh  NumpyHist2D.hh  NumpyHist2D.icc  NumpyHistBase.hh  RedisNumpy.hh
cxx/src/Hist/libsrc/: HistCtypes.cc  NumpyHist1D.cc  NumpyHist2D.cc  NumpyHistBase.cc  RedisNumpy.cc
src/cxx/: CMakeLists.txt
src/cxx/Ana/libinc/: AnaManager.hh  HistBase.hh  PTAnaManager.hh  PTEst1D.hh  PTHist1D.hh  PTHist2D.hh  PTHist2D.icc  PTHistBase.hh  PTHistCtypes.hh  PTKillerMCPL.hh  PTMultiScatMixin.hh  PTScorer.hh  PTScorer.icc  PTScorer1D.hh  PTScorer2D.hh  PTScorerAngular.hh  PTScorerDeltaMomentum.hh  PTScorerDeposition.hh  PTScorerDirectSqw.hh  PTScorerESD.hh  PTScorerESpectrum.hh  PTScorerFactory.hh  PTScorerMultiScat.hh  PTScorerMultiScatMixin.hh  PTScorerNeutronSq.hh  PTScorerPSD.hh  PTScorerRotatingObj.hh  PTScorerSplit.hh  PTScorerTOF.hh  PTScorerVolFluence.hh  PTScorerVolFlux.hh  PTScorerWlAngle.hh  PTScorerWlSpectrum.hh  PTScoror.hh  PTScororESD.hh  PTScororMultiScat.hh  PTScororNeutronSq.hh  PTScororPSD.hh  PTScororTOF.hh  PTScororVolFlux.hh
src/cxx/Ana/libsrc/: AnaManager.cc  Hist1D.cc  Hist2D.cc  HistBase.cc  HistCtypes.cc  PTAnaManager.cc  PTEst1D.cc  PTHist1D.cc  PTHist2D.cc  PTHistBase.cc  PTHistCtypes.cc  PTKillerMCPL.cc  PTScorer.cc  PTScorerAngular.cc  PTScorerDeltaMomentum.cc  PTScorerDeposition.cc  PTScorerDirectSqw.cc  PTScorerESD.cc  PTScorerESpectrum.cc  PTScorerFactory.cc  PTScorerMultiScat.cc  PTScorerNeutronSq.cc  PTScorerPSD.cc  PTScorerRotatingObj.cc  PTScorerSplit.cc  PTScorerTOF.cc  PTScorerVolFluence.cc  PTScorerVolFlux.cc  PTScorerWlAngle.cc  PTScorerWlSpectrum.cc  PTScororESD.cc  PTScororMultiScat.cc  PTScororNeutronSq.cc  PTScororPSD.cc  PTScororTOF.cc  PTScororVolFlux.cc
src/cxx/Core/libinc/: PTCentralData.hh  PTException.hh  PTGidiSetting.hh  PTLauncher.hh  PTMath.icc  PTNeutron.hh  PTParticle.hh  PTProton.hh  PTPythonContext.hh  PromptCore.hh
src/cxx/Core/libsrc/: PTCentralData.cc  PTException.cc  PTGidiSetting.cc  PTLauncher.cc  PromptCore.cc
src/cxx/Geometry/libinc/: PTActiveVolume.hh  PTGeoLoader.hh  PTGeoManager.hh  PTGeoTranslator.hh  PTNavManager.hh  PTResourceManager.hh  PTVisualiser.hh  PTVolumePhysicsScorer.hh
src/cxx/Geometry/libsrc/: PTActiveVolume.cc  PTGeoLoader.cc  PTGeoManager.cc  PTGeoTranslator.cc  PTNavManager.cc  PTResourceManager.cc  PTVisualiser.cc  PTVolumePhysicsScorer.cc
src/cxx/Gun/libinc/: PTGunFactory.hh  PTIsotropicGun.hh  PTMCPLGun.hh  PTMPIGun.hh  PTMaxwellianGun.hh  PTModeratorGun.hh  PTPrimaryGun.hh  PTPythonGun.hh  PTSimpleThermalGun.hh  PTUniModeratorGun.hh
src/cxx/Gun/libsrc/: PTGunFactory.cc  PTMCPLGun.cc  PTMPIGun.cc  PTMaxwellianGun.cc  PTModeratorGun.cc  PTPrimaryGun.cc  PTPythonGun.cc
src/cxx/MCPL/libinc/: NumpyWriter.hh  NumpyWriter.tpp  PTBinaryWR.hh  PTMCPLBinary.hh  PTMCPLBinaryWrite.hh  PTMCPLParticleReader.hh
src/cxx/MCPL/libsrc/: NumpyWriter.cc  PTBinaryWR.cc  PTMCPLBinaryWrite.cc  PTMCPLParticleReader.cc
src/cxx/Material/libinc/: PTMaterial.hh  PTMaterialPhysics.hh
src/cxx/Material/libsrc/: PTMaterial.cc  PTMaterialPhysics.cc
src/cxx/ModelBulk/libinc/: PTCompoundModel.hh  PTDiscreteModel.hh  PTGIDI.hh  PTGIDIElasticModel.hh  PTGIDIFactory.hh  PTGIDIModel.hh  PTGIDINeutronElastic.hh  PTIdealElaScat.hh  PTModelCollection.hh  PTNCrystalAbs.hh  PTNCrystalScat.hh  PTPhysicsModel.hh
src/cxx/ModelBulk/libsrc/: PTCompoundModel.cc  PTDiscreteModel.cc  PTGIDI.cc  PTGIDIElasticModel.cc  PTGIDIFactory.cc  PTGIDIModel.cc  PTIdealElaScat.cc  PTModelCollection.cc  PTNCrystalAbs.cc  PTNCrystalScat.cc  PTPhysicsModel.cc
src/cxx/ModelRayTracing/libinc/: PTDiskChopper.hh
src/cxx/ModelRayTracing/libsrc/: PTDiskChopper.cc
src/cxx/ModelSurface/libinc/: PTMirror.hh
src/cxx/ModelSurface/libsrc/: PTMirror.cc
src/cxx/Models/libinc/: PTCompoundModel.hh  PTDiscreteModel.hh  PTDiskChopper.hh  PTIdealElaScat.hh  PTMirrorPhysics.hh  PTModelCollection.hh  PTModelManager.hh  PTNCrystal.hh  PTNCrystalAbs.hh  PTNCrystalScat.hh  PTPhysicsFactory.hh  PTPhysicsModel.hh  PTRotatingObj.hh
src/cxx/Models/libsrc/: PTCompoundModel.cc  PTDiscreteModel.cc  PTDiskChopper.cc  PTIdealElaScat.cc  PTMirrorPhysics.cc  PTModelCollection.cc  PTNCrystal.cc  PTNCrystalAbs.cc  PTNCrystalScat.cc  PTPhysicsFactory.cc  PTPhysicsModel.cc  PTRotatingObj.cc
src/cxx/Particle/libinc/: PTNeutron.hh  PTParticle.hh  PTProton.hh
src/cxx/Particle/libsrc/: PTParticle.cc
src/cxx/Particles/libinc/: PTGamma.hh  PTMaxwellianGun.hh  PTModeratorGun.hh  PTNeutron.hh  PTParticle.hh  PTPhoton.hh  PTProton.hh  PTSingletonTrackManager.hh  PTStackManager.hh  PTTrack.hh  PTTrackManager.hh
src/cxx/Particles/libsrc/: PTMaxwellianGun.cc  PTParticle.cc  PTPrimaryGun.cc  PTSingletonTrackManager.cc  PTStackManager.cc  PTTrack.cc  PTTrackManager.cc
src/cxx/Process/libinc/: PTBulkMaterialProcess.hh  PTParticleProcess.hh  PTPhysicsFactory.hh  PTRayTracingProcess.hh  PTSurfaceProcess.hh
src/cxx/Process/libsrc/: PTBulkMatrialProcess.cc  PTParticleProcess.cc  PTPhysicsFactory.cc  (+1 more)
src/cxxtest/: CMakeLists.txt  doctest.h  test_main.cpp
src/cxxtest/unittest/: test_geomanager.cc  test_geonav.cc  test_gun.cc  test_hist1d.cc  test_isotropicgun.cc  test_material.cc  test_math.cc  test_mirrorPhysics.cc  test_modelcollection.cc  test_ncrystal.cc  test_particle.cc  test_randGenMT19937_64.cc  test_randGenRandEngine.cc  test_rng.cc
src/cxxtests/: CMakeLists.txt  doctest.h  test_main.cpp
src/cxxtests/unittest/: test_cfgpaser.cc  test_geonav.cc  test_geotree.cc  test_gidi.cc  test_gun.cc  test_hist1d.cc  test_isotropicgun.cc  test_material.cc  test_math.cc  test_mcpl.cc  test_mirrorPhysics.cc  test_modelcollection.cc  test_ncrystal.cc  test_particle.cc  test_randGenMT19937_64.cc  test_randGenRandEngine.cc  test_rng.cc  test_rotobj.cc  test_scorertype.cc  test_tak_fftw.cc  test_tak_integral.cc  test_tak_openmp.cc  test_tak_window.cc
(+523 files in other folders)
