[project]
name="neutron-cinema"
version="2.0.0a1"
authors=[
    {name="Xiao-Xiao Cai"},
    {name="Ming Tang"},
    {name="Zi-Yi Pan"},
    {name="Ni Yang"},
    {email="cinema-users@outlook.com"},
    ]
description="China Spallation Neutron Source Monte Carlo System"
readme = "README.md"
keywords = ["NCyrstal", "Neutron Scattering", "Spectroscopy"]
requires-python = ">=3.7"
classifiers = [
    'Intended Audience :: Science/Research',

    'Topic :: Scientific/Engineering :: Physics',

    'License :: OSI Approved',

    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',

    'Operating System :: POSIX :: Linux',
]
dependencies = [
    "pyvista",
    "matplotlib",
    "mcpl",
    "scipy",
    "h5py",
    "optuna",
    "mpi4py",
    "psutil",
]


[project.urls]
repository = "https://gitlab.com/cinema-developers/prompt.git"